# python-project-49

./: .gitignore  Makefile  README.md  brain_calc.cast  brain_even.cast  brain_gcd.cast  brain_prime.cast  brain_progression.cast  calc.cast  demo.cast  even.cast  gcd.cast  prime.cast  prog.cast  pyproject.toml
brain_games/: cli.py  welcome_user.py
brain_games/engine/: calc_engine.py  engine.py  is_divider_engine.py  is_even_engine.py
brain_games/games/: calc.py  divider.py  gcd.py  is_even.py  is_prime.py  is_prime_number_game.py  progression.py  progression_game.py
brain_games/games/calc_game/: calc.py
brain_games/games/gcd_game/: divider.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even_old  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
