[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = "Brain-games include: brain-calc, brain-even, brain-progression, brain-gcd, brain-prime"
authors = ["Alex Susalev <figan915@gmail.com>"]
readme = "README.md"
repository = "https://github.com/figan915/python-project-49.git"
packages = [
  { include = "brain_games" },
]



[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
'Environment :: Console',
'Natural Language :: English',
'Development Status :: 4 - Beta',
'Operating System :: MacOS',
'Operating System :: Microsoft',
'Operating System :: POSIX :: Linux',
'Programming Language :: Python',
'Intended Audience :: Education',
'Topic :: Games/Entertainment :: Arcade'
]

